--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -87,12 +87,13 @@ background-color: brown;
 }
 
 .rond{
-  width: 25px;
-  height: 25px;
+  width: 35px;
+  height: 37px;
   border-radius: 50%;
   border: 1px black solid;
   background-color: red;
   text-align: center;
+  margin:auto
 }
 
 .carre1, .carre2, .carre3{
