--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -162,6 +162,8 @@
 
 <router-outlet></router-outlet>
 
+<!--si isMovePion est true, on appelle move() et isWinner-->
+
 <!--règles d'insertion des pions dans les cases:
 
 * si le pion n'est pas encore positionné et que la case est vide retourne true;
